apps/fertiscan-preview/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fertiscan-backend-preview
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fertiscan-backend-preview
  template:
    metadata:
      labels:
        app: fertiscan-backend-preview
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: fertiscan-backend-preview
          image: ghcr.io/ai-cfia/fertiscan-backend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: tmp
              mountPath: /cachedir_joblib
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fertiscan-backend-preview-svc
spec:
  clusterIP: None
  selector:
    app: fertiscan-backend-preview
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: api
