apps/fertiscan-preview/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fertiscan-frontend-preview
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fertiscan-frontend-preview
  template:
    metadata:
      labels:
        app: fertiscan-frontend-preview
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: fertiscan-frontend-preview
          image: ghcr.io/ai-cfia/fertiscan-frontend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: fertiscan-frontend-preview-svc
spec:
  clusterIP: None
  selector:
    app: fertiscan-frontend-preview
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
