apps/fertiscan-preview/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fertiscan-backend-preview-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.21
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fertiscan-backend-preview-svc
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fertiscan-frontend-preview-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.22
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:

        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fertiscan-frontend-preview-svc
                port:
                  number: 80
          - path: /swagger(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fertiscan-backend-preview-svc
                port:
                  number: 5000
